# rust-embedded-gtk-plot

./: README.md
appendix/: Cargo.toml  README.md
appendix/src/: func_ptr.rs  range_iter.rs  return_closure.rs
learn_plotter/: Cargo.toml  README.md
learn_plotter/src/: many_plot.rs  plot_1.rs  realtime_1.rs  scatter.rs
learn_plotter/src/3d_plot/: axes_3d.rs  line_3d.rs  line_3d_perspective.rs  scatter_3d.rs  surface_3d.rs
learn_plotter/src/basics/: area_chart.rs  axes.rs  histogram.rs  legend.rs  line.rs  line_series.rs  mesh.rs  scatter.rs  title.rs
plot_3d_with_slider/: Cargo.toml  README.md
plot_3d_with_slider/src/: q_func.rs  q_func_2.rs
plot_3d_with_slider/src/ui/: q_func.ui
plot_with_slider/: Cargo.toml  README.md
plot_with_slider/src/: plot_slider.rs  plot_slider_range.rs
plot_with_slider/src/ui/: plot_slider.ui  plot_slider_range.ui
select_peak/get_coordinates/: Cargo.toml
select_peak/get_coordinates/src/: coo_drawing_area.rs
select_peak/get_coordinates/src/ui/: q_func.ui
simple_plot/: Cargo.toml  README.md
simple_plot/src/: demo.rs  plot_fig.rs  quadratic_func.rs  quadratic_func_param.rs
