[package]
name = "learn_plotter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "plot_1"
path = "src/plot_1.rs"

[[bin]]
name = "many_plot"
path = "src/many_plot.rs"

[[bin]]
name = "scatter"
path = "src/scatter.rs"

[dependencies]
cairo-rs = "0.17.10"
gio = "0.17.10"
gtk = "0.17.1"
plotters = "0.3.5"
plotters-cairo = "0.4.0"
