[package]
name = "plot_with_slider"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "plot_slider"
path = "src/plot_slider.rs"

[[bin]]
name = "plot_slider_range"
path = "src/plot_slider_range.rs"

[dependencies]
cairo-rs = "0.17.10"
gio = "0.17.10"
gtk = "0.17.1"
plotters = "0.3.5"
plotters-cairo = "0.4.0"
