[package]
name = "plot_gtk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "plot-fig"
path = "src/plot_fig.rs"

[[bin]]
name = "demo"
path = "src/demo.rs"

[[bin]]
name = "q_func"
path = "src/quadratic_func.rs"

[[bin]]
name = "q_func_param"
path = "src/quadratic_func_param.rs"

[dependencies]
cairo-rs = "0.17.10"
gio = "0.17.10"
gtk = "0.17.1"
plotters = "0.3.5"
plotters-cairo = "0.4.0"
